Small bug fix for directions scrollbar and loading popup bugfix

--- a/src/App.css
+++ b/src/App.css
@@ -538,7 +538,7 @@ input[type=range]:focus::-ms-fill-upper {
 
 .directions-list {
   width: 30%;
-  overflow-y: scroll;
+  overflow-y: auto;
   overflow-x: hidden;
 }
 
